Fixed the alignment of the Colour-btns-set2 so that when we click on each button it is fix

--- a/src/assets/stylesheets/components/banner/right-banner.css
+++ b/src/assets/stylesheets/components/banner/right-banner.css
@@ -83,8 +83,8 @@
 /*colours set1*/
 
 .colour-wrapper-set1 {
-  /*  display: none;
-*/
+    display: none;
+
 }
 
 .color-btn {
@@ -99,14 +99,14 @@
   margin-top: 20px;
 }
 
-.btn-color.black {
+.color-btn.black {
   padding: 15px;
   border-radius: 50%;
   background-color: black;
   outline: 0;
 }
 
-.btn-color.white {
+.color-btn.white {
   padding: 15px;
   border-radius: 50%;
   border: 1px solid grey;
@@ -114,19 +114,13 @@
   outline: 0;
 }
 
-.btn-color.black.active {
+.color-btn.black.active {
   border-style: solid;
   border-width: 6px;
   border-color: rgb(220, 220, 220);
 }
 
-/*.active {
-  border-style: solid;
-  border-width: 6px;
-  border-color: rgb(220, 220, 220);
-}*/
-
-.btn-color.white.active {
+.color-btn.white.active {
   border: 2px solid black;
   box-shadow: 0 0 0 4px black inset;
 }
@@ -134,14 +128,14 @@
 /*colours set2*/
 
 .colour-wrapper-set2 {
-  display: none;
+/*  display: none;*/
 }
 
 .colour-btns-set2 {
-  width: 40%;
+  width: 160px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 20px;
 }
 
@@ -183,21 +177,13 @@
   outline: 0;
 }
 
-.color-btn.red.active {
-  border-style: solid;
-  border-width: 6px;
-  border-color: rgb(220, 220, 220);
-}
-
-.color-btn.white-brown.active {
-  border-style: solid;
-  border-width: 6px;
-  border-color: rgb(220, 220, 220);
-}
-
+.color-btn.red.active,
+.color-btn.white-brown.active,
 .color-btn.black-brown.active {
   border-style: solid;
   border-width: 6px;
   border-color: rgb(220, 220, 220);
+  margin: -5px;
 }
+
 /*colours design ends*/
